Add PEM artifacts creation with unit tests
Issue-ID: AAF-1152
Signed-off-by: Joanna Jeremicz <joanna.jeremicz@nokia.com>
Change-Id: I95afd62330f3111f916507d628d142262ff951cc